<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <Button
        android:id="@+id/btsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:theme="@style/PrimaryButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="end"
        android:padding="@dimen/_5sdp"
        android:text="@string/info"
        android:textColor="@color/blackdark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ed_pObject"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"/>

            <EditText
                android:id="@+id/edpobj"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ed_Reference"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/edrefrence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ed_Location"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/edlocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ed_Place"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/edplace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/white"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ed_By"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/edby"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_5sdp"

            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/edextra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ed_CorrectMM"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/edcorrect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:hint="-500 to +500"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>